--- a/roster.html
+++ b/roster.html
@@ -100,6 +100,7 @@
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
+<tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
@@ -113,7 +114,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DET</td><td>D'Andre Swift          </td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
 <tr><td>JAX</td><td>James Robinson         </td></tr>
 </table>
@@ -124,10 +124,10 @@
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
-<tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
 <tr><td> NE</td><td>James White            </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
+<tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
@@ -143,7 +143,7 @@
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>JK Dobbins             </td></tr>
-<tr><td>TEN</td><td>Darrynton Evans        </td></tr>
+<tr><td>DET</td><td>D'Andre Swift          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -229,7 +229,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
-<tr><td>TEN</td><td>Tucker McCann          </td></tr>
+<tr><td>CHI</td><td>Darnell Mooney         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -243,7 +243,6 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>CHI</td><td>Tarik Cohen            </td></tr>
-<tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td>NYG</td><td>Devonta Freeman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
@@ -258,6 +257,7 @@
 <tr><td>LAR</td><td>Cam Akers              </td></tr>
 <tr><td>PHI</td><td>Jalen Reagor           </td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
+<tr><td>TEN</td><td>Darrynton Evans        </td></tr>
 </table>
 </td>
 </tr>
