--- a/pickups.html
+++ b/pickups.html
@@ -332,6 +332,17 @@ Team 9  - Marvin Jones/Deebo Samuel (9/13)<br>
 Team 8  - Malcolm Brown/Blake Jarwin (9/15)<br>
 Team 6  - Robby Anderson/Courtland Sutton (9/22)<br>
 Team 2  - Mike Davis/Denzel Mims (9/22)<br>
-Team 6  - Julian Edelman/Damien Harris (9/22)
+Team 6  - Julian Edelman/Damien Harris (9/22)<br>
+Team 8  - Darnell Mooney/Tucker McCann (9/27)
+</td></tr>
+<tr><td width=50>9/25</td>
+<td width=600>
+Team 4 - David Montomery<br>
+Team 5 - D'Andre Swift
+</td></tr>
+<tr><td width=50>9/27</td>
+<td width=600>
+Team 5 - Nyheim Hines<br>
+Team 9 - Darrynton Evans
 </td></tr>
 </table>
