--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
-<a href="week3.html"><b>3P</b></a><br>
+<a href="week3.html"><b>3</b></a>
+<a href="week4.html"><b>4P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -62,43 +63,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1785</font></td>
-    <td><font size=2>1055</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2415</font></td>
+    <td><font size=2>1885</font></td>
     <td><font size=2>1010</font></td>
-    <td><font size=2>775</font></td>
+    <td><font size=2>630</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1555</font></td>
-    <td><font size=2>1555</font></td>
+    <td><font size=2>2305</font></td>
+    <td><font size=2>2180</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>710</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1510</font></td>
-    <td><font size=2>1370</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2135</font></td>
+    <td><font size=2>2120</font></td>
     <td><font size=2>815</font></td>
-    <td><font size=2>695</font></td>
+    <td><font size=2>625</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1885</font></td>
+    <td><font size=2>2455</font></td>
+    <td><font size=2>705</font></td>
+    <td><font size=2>540</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1245</font></td>
-    <td><font size=2>1470</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>1875</font></td>
+    <td><font size=2>2175</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>415</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Rich(1)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1180</font></td>
-    <td><font size=2>1825</font></td>
-    <td><font size=2>640</font></td>
-    <td><font size=2>540</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -109,43 +110,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1955</font></td>
-    <td><font size=2>1265</font></td>
+    <td><font size=2>2905</font></td>
+    <td><font size=2>1805</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>830</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1595</font></td>
-    <td><font size=2>1150</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2135</font></td>
+    <td><font size=2>2100</font></td>
     <td><font size=2>940</font></td>
-    <td><font size=2>655</font></td>
+    <td><font size=2>540</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1410</font></td>
-    <td><font size=2>1610</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2130</font></td>
+    <td><font size=2>2345</font></td>
     <td><font size=2>785</font></td>
     <td><font size=2>625</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1100</font></td>
-    <td><font size=2>1495</font></td>
-    <td><font size=2>670</font></td>
+    <td><font size=2>1930</font></td>
+    <td><font size=2>2125</font></td>
+    <td><font size=2>830</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>945</font></td>
-    <td><font size=2>1485</font></td>
-    <td><font size=2>525</font></td>
+    <td><font size=2>1680</font></td>
+    <td><font size=2>2205</font></td>
+    <td><font size=2>735</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
