--- a/pickups.html
+++ b/pickups.html
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Myles Gaskin/Josh Gordon</td>
+<td width=50>9/25</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -333,7 +333,9 @@ Team 8  - Malcolm Brown/Blake Jarwin (9/15)<br>
 Team 6  - Robby Anderson/Courtland Sutton (9/22)<br>
 Team 2  - Mike Davis/Denzel Mims (9/22)<br>
 Team 6  - Julian Edelman/Damien Harris (9/22)<br>
-Team 8  - Darnell Mooney/Tucker McCann (9/27)
+Team 8  - Darnell Mooney/Tucker McCann (9/27)<br>
+Team 6  - Mason Crosby/Josh Lambo (9/29)<br>
+Team 9  - Deebo Samuel/Tarik Cohen (9/29)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
