--- a/roster.html
+++ b/roster.html
@@ -128,6 +128,7 @@
 <tr><td> NE</td><td>James White            </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
+<tr><td>MIA</td><td>Myles Gaskin           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
@@ -135,7 +136,6 @@
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td> NE</td><td>N'Keal Harry           </td></tr>
 <tr><td> NE</td><td>Antonio Brown          </td></tr>
-<tr><td>SEA</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
@@ -166,7 +166,7 @@
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DEN</td><td>Brandon McManus        </td></tr>
-<tr><td>JAX</td><td>Josh Lambo             </td></tr>
+<tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
@@ -242,13 +242,13 @@
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
-<tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td>NYG</td><td>Devonta Freeman        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
 <tr><td>DET</td><td>Marvin Jones           </td></tr>
+<tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
 <tr><td height=9></td><td></td></tr>
