--- a/pickups.html
+++ b/pickups.html
@@ -330,12 +330,13 @@ Free Pickups:<br>
 Team 1  - Ryan Succop/Matt Gay (9/12)<br>
 Team 9  - Marvin Jones/Deebo Samuel (9/13)<br>
 Team 8  - Malcolm Brown/Blake Jarwin (9/15)<br>
-Team 6  - Robby Anderson/Courtland Sutton (9/22)<br>
+Team 7  - Robby Anderson/Courtland Sutton (9/22)<br>
 Team 2  - Mike Davis/Denzel Mims (9/22)<br>
-Team 6  - Julian Edelman/Damien Harris (9/22)<br>
+Team 7  - Julian Edelman/Damien Harris (9/22)<br>
 Team 8  - Darnell Mooney/Tucker McCann (9/27)<br>
 Team 6  - Mason Crosby/Josh Lambo (9/29)<br>
-Team 9  - Deebo Samuel/Tarik Cohen (9/29)
+Team 9  - Deebo Samuel/Tarik Cohen (9/29)<br>
+Team 7  - Damien Harris/Michael Pittman (10/5)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
