--- a/roster.html
+++ b/roster.html
@@ -187,6 +187,7 @@
 <tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td>HOU</td><td>Duke Johnson           </td></tr>
+<tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
@@ -200,7 +201,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
-<tr><td>IND</td><td>Michael Pittman        </td></tr>
 <tr><td> GB</td><td>Jordan Love            </td></tr>
 </table>
 </td>
