--- a/week4.html
+++ b/week4.html
@@ -112,7 +112,7 @@
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
 <tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
