--- a/thousand.html
+++ b/thousand.html
@@ -789,6 +789,12 @@
     <td>1030</td>
     <td>Mike</td>
     <td>590</td></tr>
+<tr><td>2020</td>
+    <td>Week 4</td>
+    <td>Rich Fleck</td>
+    <td>1030</td>
+    <td>Randy</td>
+    <td>705</td></tr>
 <tr><td>2003</td>
     <td>Week 13</td>
     <td>Rich Fleck</td>
@@ -957,6 +963,12 @@
     <td>1010</td>
     <td>Rich</td>
     <td>640</td></tr>
+<tr><td>2020</td>
+    <td>Week 4</td>
+    <td>States Edwards</td>
+    <td>1010</td>
+    <td>Matthew</td>
+    <td>810</td></tr>
 <tr><td>2003</td>
     <td>Week 2</td>
     <td>Mike Wieczorek</td>
@@ -987,6 +999,12 @@
     <td>1005</td>
     <td>Randy</td>
     <td>470</td></tr>
+<tr><td>2020</td>
+    <td>Week 4</td>
+    <td>Grant Mydland</td>
+    <td>1005</td>
+    <td>Roger</td>
+    <td>335</td></tr>
 <tr><td>2002</td>
     <td>Week 13</td>
     <td>States Edwards</td>
