--- a/week4.html
+++ b/week4.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Fuller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lamb</td>          <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>130</td></tr>
+<tr><td>Carson</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>75</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>55</td></tr>
+<tr><td>Fuller</td>        <td></td><td align=right>150</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>225</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>45</td></tr>
+<tr><td>Lamb</td>          <td></td><td align=right>210</td></tr>
+<tr><td></td>              <td></td><td align=right>1030</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>280</td></tr>
+<tr><td>Cook</td>          <td></td><td align=right>215</td></tr>
 <tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Robinson</td>      <td></td><td align=right>125</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hooper</td>        <td></td><td align=right>50</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>10</td></tr>
+<tr><td>Mooney</td>        <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>705</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (2)</b></font></td></tr>
-<tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Allen</td>         <td></td><td align=right>220</td></tr>
+<tr><td>Hunt</td>          <td></td><td align=right>185</td></tr>
 <tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Evans</td>         <td></td><td align=right>135</td></tr>
+<tr><td>Thielen</td>       <td></td><td align=right>130</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Gould</td>         <td></td><td align=right>10</td></tr>
+<tr><td>Taylor</td>        <td></td><td align=right>30</td></tr>
+<tr><td></td>              <td></td><td align=right>750</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (6)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>315</td></tr>
 <tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>155</td></tr>
 <tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>60</td></tr>
+<tr><td>Burrow</td>        <td></td><td align=right>100</td></tr>
+<tr><td></td>              <td></td><td align=right>630</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
-<tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Beckham</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Watson</td>        <td></td><td align=right>200</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>110</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>30</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>50</td></tr>
+<tr><td>Beckham</td>       <td></td><td align=right>425</td></tr>
 <tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>65</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>130</td></tr>
+<tr><td></td>              <td></td><td align=right>1010</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>375</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
-<tr><td>McKinnon</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Sloman</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McKinnon</td>      <td></td><td align=right>75</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>105</td></tr>
+<tr><td>Cooper</td>        <td></td><td align=right>170</td></tr>
+<tr><td>Ertz</td>          <td></td><td align=right>5</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>40</td></tr>
+<tr><td>Sloman</td>        <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>810</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (4)</b></font></td></tr>
-<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Peterson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>45</td></tr>
+<tr><td>Peterson</td>      <td></td><td align=right>50</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>10</td></tr>
+<tr><td>Boyd</td>          <td></td><td align=right>45</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Kelce</td>         <td></td><td align=right>35</td></tr>
+<tr><td>Butker</td>        <td></td><td align=right>60</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>280</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (7)</b></font></td></tr>
-<tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DaJohnson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Murray</td>        <td></td><td align=right>110</td></tr>
+<tr><td>DaJohnson</td>     <td></td><td align=right>30</td></tr>
+<tr><td>MGordon</td>       <td></td><td align=right>300</td></tr>
 <tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>55</td></tr>
+<tr><td>Kittle</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>40</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>295</td></tr>
+<tr><td></td>              <td></td><td align=right>970</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Wilson</td>        <td></td><td align=right>140</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>65</td></tr>
 <tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>105</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Lutz</td>          <td></td><td align=right>25</td></tr>
 <tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>335</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Prescott</td>      <td></td><td align=right>390</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>90</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>450</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>50</td></tr>
 <tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hurst</td>         <td></td><td align=right>25</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>1005</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -167,44 +167,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2415</font></td>
-    <td><font size=2>1885</font></td>
+    <td><font size=2>3425</font></td>
+    <td><font size=2>2695</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>630</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Roger(5)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2305</font></td>
-    <td><font size=2>2180</font></td>
-    <td><font size=2>845</font></td>
-    <td><font size=2>710</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2135</font></td>
-    <td><font size=2>2120</font></td>
-    <td><font size=2>815</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3105</font></td>
+    <td><font size=2>2400</font></td>
+    <td><font size=2>970</font></td>
     <td><font size=2>625</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1885</font></td>
-    <td><font size=2>2455</font></td>
-    <td><font size=2>705</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2915</font></td>
+    <td><font size=2>3160</font></td>
+    <td><font size=2>1030</font></td>
     <td><font size=2>540</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1875</font></td>
-    <td><font size=2>2175</font></td>
-    <td><font size=2>830</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2880</font></td>
+    <td><font size=2>2510</font></td>
+    <td><font size=2>1005</font></td>
     <td><font size=2>415</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2640</font></td>
+    <td><font size=2>3185</font></td>
+    <td><font size=2>845</font></td>
+    <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -215,42 +215,42 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>2905</font></td>
-    <td><font size=2>1805</font></td>
+    <td><font size=2>3655</font></td>
+    <td><font size=2>2435</font></td>
     <td><font size=2>1125</font></td>
-    <td><font size=2>830</font></td>
+    <td><font size=2>750</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2135</font></td>
-    <td><font size=2>2100</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2945</font></td>
+    <td><font size=2>3110</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>540</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2130</font></td>
-    <td><font size=2>2345</font></td>
-    <td><font size=2>785</font></td>
-    <td><font size=2>625</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1930</font></td>
-    <td><font size=2>2125</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2560</font></td>
+    <td><font size=2>2875</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>430</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Mike(4)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2410</font></td>
+    <td><font size=2>3315</font></td>
+    <td><font size=2>785</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1680</font></td>
-    <td><font size=2>2205</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2385</font></td>
+    <td><font size=2>3235</font></td>
     <td><font size=2>735</font></td>
     <td><font size=2>420</font></td>
     <td><font size=2>0</font></td></tr>
