--- a/roster.html
+++ b/roster.html
@@ -98,9 +98,9 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
-<tr><td>IND</td><td>Marlon Mack            </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
+<tr><td>SEA</td><td>Carlos Hyde            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
