--- a/week5.html
+++ b/week5.html
@@ -54,7 +54,7 @@
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
