--- a/roster.html
+++ b/roster.html
@@ -186,7 +186,6 @@
 <tr><td>HOU</td><td>David Johnson          </td></tr>
 <tr><td>DEN</td><td>Melvin Gordon          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
-<tr><td>HOU</td><td>Duke Johnson           </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
@@ -198,6 +197,7 @@
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
+<tr><td>TEN</td><td>Stephen Gostkowski     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Tyler Bass             </td></tr>
 <tr><td>LAC</td><td>Justin Herbert         </td></tr>
