--- a/pickups.html
+++ b/pickups.html
@@ -23,8 +23,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dalton Schultz/Hunter Henry</td>
+<td width=50>10/16</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Andy Dalton/Kyle Rudolph</td>
+<td width=50>10/13</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
