--- a/roster.html
+++ b/roster.html
@@ -50,7 +50,7 @@
 <tr><td>NYG</td><td>Darius Slayton         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
-<tr><td>LAC</td><td>Hunter Henry           </td></tr>
+<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -122,6 +122,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (5)</b></font></td></tr>
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
+<tr><td>DAL</td><td>Andy Dalton            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td> TB</td><td>Leonard Fournette      </td></tr>
@@ -138,7 +139,6 @@
 <tr><td> NE</td><td>Antonio Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
-<tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td height=9></td><td></td></tr>
