--- a/week6.html
+++ b/week6.html
@@ -41,7 +41,7 @@
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -101,7 +101,7 @@
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Higbee</td>        <td></td><td align=right>0</td></tr>
-<tr><td>-</td>             <td></td><td align=right>0</td></tr>
+<tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Burrow</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -125,14 +125,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Brees</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Mooney</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
