--- a/pickups.html
+++ b/pickups.html
@@ -337,7 +337,8 @@ Team 8  - Darnell Mooney/Tucker McCann (9/27)<br>
 Team 6  - Mason Crosby/Josh Lambo (9/29)<br>
 Team 9  - Deebo Samuel/Tarik Cohen (9/29)<br>
 Team 7  - Damien Harris/Michael Pittman (10/5)<br>
-Team 4  - Carlos Hyde/Marlon Mack (10/8)
+Team 4  - Carlos Hyde/Marlon Mack (10/8)<br>
+Team 4  - Rex Burkhead/Saquon Barkley (10/18)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
