--- a/roster.html
+++ b/roster.html
@@ -96,11 +96,11 @@
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYG</td><td>Saquon Barkley         </td></tr>
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>SEA</td><td>Carlos Hyde            </td></tr>
+<tr><td> NE</td><td>Rex Burkhead           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
