--- a/roster.html
+++ b/roster.html
@@ -134,13 +134,13 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
-<tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td> NE</td><td>N'Keal Harry           </td></tr>
 <tr><td> NE</td><td>Antonio Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
+<tr><td>MIA</td><td>Jason Sanders          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>JK Dobbins             </td></tr>
 <tr><td>DET</td><td>D'Andre Swift          </td></tr>
@@ -247,10 +247,10 @@
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
-<tr><td>DET</td><td>Marvin Jones           </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
+<tr><td> GB</td><td>Robert Tonyan          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
