--- a/pickups.html
+++ b/pickups.html
@@ -158,8 +158,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jason Sanders/Jarvis Landry</td>
+<td width=50>10/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -286,8 +286,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Robert Tonyan/Marvin Jones</td>
+<td width=50>10/14</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
