--- a/week6.html
+++ b/week6.html
@@ -8,8 +8,8 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (1)</b></font></td></tr>
 <tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
+<tr><td>JHoward</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Fuller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
@@ -21,14 +21,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (5)</b></font></td></tr>
-<tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Dalton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hines</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gaskin</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>KAllen</td>        <td></td><td align=right>0</td></tr>
+<tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lutz</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Dobbins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -139,12 +139,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Newton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Freeman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hurst</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
 <tr><td>Akers</td>         <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
