--- a/thousand.html
+++ b/thousand.html
@@ -1005,6 +1005,12 @@
     <td>1005</td>
     <td>Roger</td>
     <td>335</td></tr>
+<tr><td>2020</td>
+    <td>Week 6</td>
+    <td>Sam Edwards</td>
+    <td>1005</td>
+    <td>States</td>
+    <td>695</td></tr>
 <tr><td>2002</td>
     <td>Week 13</td>
     <td>States Edwards</td>
