--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6P</b></a><br>
+<a href="week6.html"><b>6</b></a>
+<a href="week7.html"><b>7P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -65,41 +66,41 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4315</font></td>
-    <td><font size=2>3500</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5010</font></td>
+    <td><font size=2>4505</font></td>
     <td><font size=2>1010</font></td>
     <td><font size=2>630</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3865</font></td>
-    <td><font size=2>2930</font></td>
-    <td><font size=2>970</font></td>
+    <td><font size=2>4870</font></td>
+    <td><font size=2>3625</font></td>
+    <td><font size=2>1005</font></td>
     <td><font size=2>625</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3645</font></td>
-    <td><font size=2>3440</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4125</font></td>
+    <td><font size=2>4080</font></td>
     <td><font size=2>1030</font></td>
-    <td><font size=2>540</font></td>
+    <td><font size=2>480</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3495</font></td>
-    <td><font size=2>3235</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4100</font></td>
+    <td><font size=2>3320</font></td>
     <td><font size=2>1005</font></td>
     <td><font size=2>415</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3445</font></td>
-    <td><font size=2>4075</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4085</font></td>
+    <td><font size=2>4555</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
@@ -113,43 +114,43 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>4380</font></td>
-    <td><font size=2>3050</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>4720</font></td>
+    <td><font size=2>3840</font></td>
     <td><font size=2>1125</font></td>
-    <td><font size=2>725</font></td>
+    <td><font size=2>340</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3475</font></td>
-    <td><font size=2>3870</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3995</font></td>
+    <td><font size=2>4240</font></td>
     <td><font size=2>940</font></td>
-    <td><font size=2>530</font></td>
+    <td><font size=2>520</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Mike(4)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3480</font></td>
+    <td><font size=2>4385</font></td>
+    <td><font size=2>790</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3385</font></td>
-    <td><font size=2>3685</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>3470</font></td>
+    <td><font size=2>4290</font></td>
     <td><font size=2>1000</font></td>
-    <td><font size=2>420</font></td>
+    <td><font size=2>85</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3010</font></td>
-    <td><font size=2>3875</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3380</font></td>
+    <td><font size=2>4395</font></td>
     <td><font size=2>830</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2690</font></td>
-    <td><font size=2>4045</font></td>
-    <td><font size=2>785</font></td>
-    <td><font size=2>280</font></td>
+    <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
 </table>
