--- a/pickups.html
+++ b/pickups.html
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Hunter Henry/Malcolm Brown</td>
+<td width=50>10/20</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -338,7 +338,8 @@ Team 6  - Mason Crosby/Josh Lambo (9/29)<br>
 Team 9  - Deebo Samuel/Tarik Cohen (9/29)<br>
 Team 7  - Damien Harris/Michael Pittman (10/5)<br>
 Team 4  - Carlos Hyde/Marlon Mack (10/8)<br>
-Team 4  - Rex Burkhead/Saquon Barkley (10/18)
+Team 4  - Rex Burkhead/Saquon Barkley (10/18)<br>
+Team 10 - JaMycal Hasty/Tevin Coleman (10/21)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
