--- a/roster.html
+++ b/roster.html
@@ -215,7 +215,6 @@
 <tr><td>ATL</td><td>Todd Gurley            </td></tr>
 <tr><td>MIN</td><td>Alexander Mattison     </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
-<tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
@@ -224,6 +223,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Hooper          </td></tr>
 <tr><td>TEN</td><td>Jonnu Smith            </td></tr>
+<tr><td>LAC</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -271,7 +271,6 @@
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
-<tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td>MIA</td><td>Matt Breida            </td></tr>
 <tr><td> SF</td><td>Jerick McKinnon        </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -288,6 +287,7 @@
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
+<tr><td> SF</td><td>JaMycal Hasty          </td></tr>
 </table>
 </td>
 <td>
