--- a/week7.html
+++ b/week7.html
@@ -40,10 +40,10 @@
 <tr><td>Hunt</td>          <td></td><td align=right>0</td></tr>
 <tr><td>MDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Schultz</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Taylor</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Claypool</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -140,11 +140,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
 <tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mattison</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Drake</td>         <td></td><td align=right>0</td></tr>
+<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Robinson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>JSmith</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Moss</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
