--- a/roster.html
+++ b/roster.html
@@ -235,7 +235,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td> NE</td><td>Cam Newton             </td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -251,6 +250,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
 <tr><td> GB</td><td>Robert Tonyan          </td></tr>
+<tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
