--- a/week7.html
+++ b/week7.html
@@ -82,7 +82,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (9)</b></font></td></tr>
 <tr><td>Newton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
+<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
