--- a/roster.html
+++ b/roster.html
@@ -71,6 +71,7 @@
 <tr><td> TB</td><td>Ronald Jones           </td></tr>
 <tr><td>PHI</td><td>Boston Scott           </td></tr>
 <tr><td>BAL</td><td>Gus Edwards            </td></tr>
+<tr><td> GB</td><td>Jamaal Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
@@ -83,7 +84,6 @@
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
-<tr><td> NE</td><td>Justin Rohrwasser      </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>IND</td><td>Rodrigo Blankenship    </td></tr>
 </table>
@@ -96,7 +96,7 @@
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
+<tr><td> KC</td><td>Le'Veon Bell           </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>SEA</td><td>Carlos Hyde            </td></tr>
@@ -135,7 +135,7 @@
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td> NE</td><td>N'Keal Harry           </td></tr>
-<tr><td> NE</td><td>Antonio Brown          </td></tr>
+<tr><td> TB</td><td>Antonio Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -235,6 +235,7 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
+<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td> NE</td><td>Cam Newton             </td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -250,7 +251,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Hayden Hurst           </td></tr>
 <tr><td> GB</td><td>Robert Tonyan          </td></tr>
-<tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -279,7 +279,7 @@
 <tr><td>MIA</td><td>DeVante Parker         </td></tr>
 <tr><td>BUF</td><td>John Brown             </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PHI</td><td>Zach Ertz              </td></tr>
+<tr><td>CHI</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
