--- a/pickups.html
+++ b/pickups.html
@@ -340,7 +340,8 @@ Team 7  - Damien Harris/Michael Pittman (10/5)<br>
 Team 4  - Carlos Hyde/Marlon Mack (10/8)<br>
 Team 4  - Rex Burkhead/Saquon Barkley (10/18)<br>
 Team 10 - JaMycal Hasty/Tevin Coleman (10/21)<br>
-Team 9  - Jimmy Graham/Dak Prescott (10/24)
+Team 3  - Jamaal Williams/Justin Rohrwasser (10/25)<br>
+Team 10 - Jimmy Graham/Zach Ertz (10/25)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
