--- a/roster.html
+++ b/roster.html
@@ -64,7 +64,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>HOU</td><td>Deshaun Watson         </td></tr>
-<tr><td>LAC</td><td>Tyrod Taylor           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
@@ -82,6 +81,7 @@
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
+<tr><td>CHI</td><td>Cairo Santos           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
