--- a/pickups.html
+++ b/pickups.html
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cairo Santos/Tyrod Taylor</td>
+<td width=50>10/25</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
