--- a/thousand.html
+++ b/thousand.html
@@ -21,6 +21,12 @@
     <td>1705</td>
     <td>Sam</td>
     <td>635</td></tr>
+<tr><td>2020</td>
+    <td>Week 7</td>
+    <td>Sam Edwards</td>
+    <td>1555</td>
+    <td>Randy</td>
+    <td>725</td></tr>
 <tr><td>2010</td>
     <td>Week 14</td>
     <td>Grant Mydland</td>
