--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
-<a href="week7.html"><b>7P</b></a><br>
+<a href="week7.html"><b>7</b></a>
+<a href="week8.html"><b>8P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -64,46 +65,46 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>5010</font></td>
-    <td><font size=2>4505</font></td>
-    <td><font size=2>1010</font></td>
-    <td><font size=2>630</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4870</font></td>
-    <td><font size=2>3625</font></td>
-    <td><font size=2>1005</font></td>
+    <td><font size=2>6425</font></td>
+    <td><font size=2>4350</font></td>
+    <td><font size=2>1555</font></td>
     <td><font size=2>625</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Rich(1)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4125</font></td>
-    <td><font size=2>4080</font></td>
-    <td><font size=2>1030</font></td>
-    <td><font size=2>480</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4100</font></td>
-    <td><font size=2>3320</font></td>
-    <td><font size=2>1005</font></td>
-    <td><font size=2>415</font></td>
+    <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5585</font></td>
+    <td><font size=2>4860</font></td>
+    <td><font size=2>1010</font></td>
+    <td><font size=2>575</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4085</font></td>
-    <td><font size=2>4555</font></td>
+    <td><font size=2>4645</font></td>
+    <td><font size=2>4750</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4380</font></td>
+    <td><font size=2>4090</font></td>
+    <td><font size=2>1005</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Rich(1)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4375</font></td>
+    <td><font size=2>4845</font></td>
+    <td><font size=2>1030</font></td>
+    <td><font size=2>250</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -114,41 +115,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>4720</font></td>
-    <td><font size=2>3840</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>5075</font></td>
+    <td><font size=2>4415</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Matthew(10)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3995</font></td>
-    <td><font size=2>4240</font></td>
-    <td><font size=2>940</font></td>
-    <td><font size=2>520</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3480</font></td>
-    <td><font size=2>4385</font></td>
+    <td><font size=2>4250</font></td>
+    <td><font size=2>4665</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Matthew(10)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4190</font></td>
+    <td><font size=2>4800</font></td>
+    <td><font size=2>940</font></td>
+    <td><font size=2>195</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>3470</font></td>
-    <td><font size=2>4290</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4195</font></td>
+    <td><font size=2>5845</font></td>
     <td><font size=2>1000</font></td>
     <td><font size=2>85</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>3380</font></td>
-    <td><font size=2>4395</font></td>
+    <td><font size=2>4145</font></td>
+    <td><font size=2>4645</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
