--- a/roster.html
+++ b/roster.html
@@ -41,13 +41,13 @@
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>CLE</td><td>Nick Chubb             </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
-<tr><td>JAX</td><td>Chris Thompson         </td></tr>
 <tr><td>CAR</td><td>Mike Davis             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>NYG</td><td>Darius Slayton         </td></tr>
+<tr><td>ARI</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Darren Waller          </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
@@ -100,14 +100,13 @@
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td>SEA</td><td>Carlos Hyde            </td></tr>
-<tr><td> NE</td><td>Rex Burkhead           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>SEA</td><td>Tyler Lockett          </td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
 <tr><td>BUF</td><td>Cole Beasley           </td></tr>
-<tr><td> NO</td><td>Emmanuel Sanders       </td></tr>
+<tr><td>CLE</td><td>Rashard Higgins        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
@@ -116,6 +115,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
 <tr><td>JAX</td><td>James Robinson         </td></tr>
+<tr><td>CLE</td><td>Donovan Peoples-Jones  </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -165,13 +165,13 @@
 <tr><td>LAR</td><td>Tyler Higbee           </td></tr>
 <tr><td>PHI</td><td>Dallas Goedert         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td> GB</td><td>Mason Crosby           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Burrow             </td></tr>
 <tr><td>WAS</td><td>Antonio Gibson         </td></tr>
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td>NYJ</td><td>La'Mical Perine        </td></tr>
+<tr><td>SEA</td><td>DeeJay Dallas          </td></tr>
 </table>
 </td>
 </tr>
@@ -283,11 +283,11 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Joey Slye              </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>LAR</td><td>Sam Sloman             </td></tr>
 <tr><td>DEN</td><td>Jerry Jeudy            </td></tr>
 <tr><td> GB</td><td>AJ Dillon              </td></tr>
 <tr><td>JAX</td><td>Laviska Shenault       </td></tr>
 <tr><td> SF</td><td>JaMycal Hasty          </td></tr>
+<tr><td>DAL</td><td>Ben DiNucci            </td></tr>
 </table>
 </td>
 <td>
