--- a/pickups.html
+++ b/pickups.html
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Donovan Peoples-Jones/Rex Burkhead</td>
+<td width=50>10/26</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -163,8 +163,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>DeeJay Dallas/Brandon McManus</td>
+<td width=50>10/27</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -341,7 +341,10 @@ Team 4  - Carlos Hyde/Marlon Mack (10/8)<br>
 Team 4  - Rex Burkhead/Saquon Barkley (10/18)<br>
 Team 10 - JaMycal Hasty/Tevin Coleman (10/21)<br>
 Team 3  - Jamaal Williams/Justin Rohrwasser (10/25)<br>
-Team 10 - Jimmy Graham/Zach Ertz (10/25)
+Team 10 - Jimmy Graham/Zach Ertz (10/25)<br>
+Team 2  - Christian Kirk/Chris Thompson (10/27)<br>
+Team 4  - Rashard Higgins/Emmanuel Sanders (10/27)<br>
+Team 10 - Ben DiNucci/Sam Sloman (10/27)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
