--- a/roster.html
+++ b/roster.html
@@ -64,6 +64,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>HOU</td><td>Deshaun Watson         </td></tr>
+<tr><td> LV</td><td>Derek Carr             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
@@ -72,7 +73,6 @@
 <tr><td>BAL</td><td>Gus Edwards            </td></tr>
 <tr><td> GB</td><td>Jamaal Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>CIN</td><td>AJ Green               </td></tr>
 <tr><td>PIT</td><td>James Washington       </td></tr>
@@ -235,7 +235,6 @@
 <td valign=top>
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (9)</b></font></td></tr>
-<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td> NE</td><td>Cam Newton             </td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -243,6 +242,7 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>NYG</td><td>Devonta Freeman        </td></tr>
+<tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
