--- a/pickups.html
+++ b/pickups.html
@@ -344,7 +344,9 @@ Team 3  - Jamaal Williams/Justin Rohrwasser (10/25)<br>
 Team 10 - Jimmy Graham/Zach Ertz (10/25)<br>
 Team 2  - Christian Kirk/Chris Thompson (10/27)<br>
 Team 4  - Rashard Higgins/Emmanuel Sanders (10/27)<br>
-Team 10 - Ben DiNucci/Sam Sloman (10/27)
+Team 10 - Ben DiNucci/Sam Sloman (10/27)<br>
+Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
+Team 3  - Derek Carr/Odell Beckham (10/29)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
