--- a/pickups.html
+++ b/pickups.html
@@ -175,8 +175,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jake Luton/Mark Ingram</td>
+<td width=50>10/30</td>
 </tr></table></td>
 </tr>
 <tr>
