--- a/roster.html
+++ b/roster.html
@@ -153,7 +153,6 @@
 <tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
-<tr><td>BAL</td><td>Mark Ingram            </td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -172,6 +171,7 @@
 <tr><td> SF</td><td>Brandon Aiyuk          </td></tr>
 <tr><td>NYJ</td><td>La'Mical Perine        </td></tr>
 <tr><td>SEA</td><td>DeeJay Dallas          </td></tr>
+<tr><td>JAX</td><td>Jake Luton             </td></tr>
 </table>
 </td>
 </tr>
