--- a/thousand.html
+++ b/thousand.html
@@ -885,6 +885,12 @@
     <td>1020</td>
     <td>Sam</td>
     <td>495</td></tr>
+<tr><td>2020</td>
+    <td>Week 8</td>
+    <td>Randy Edwards</td>
+    <td>1020</td>
+    <td>Roger</td>
+    <td>780</td></tr>
 <tr><td>1998</td>
     <td>Week 13</td>
     <td>Steve Butler</td>
