--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <a href="week5.html"><b>5</b></a>
 <a href="week6.html"><b>6</b></a>
 <a href="week7.html"><b>7</b></a>
-<a href="week8.html"><b>8P</b></a><br>
+<a href="week8.html"><b>8</b></a>
+<a href="week9.html"><b>9P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -66,45 +67,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Sam(7)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6425</font></td>
-    <td><font size=2>4350</font></td>
+    <td><font size=2>7030</font></td>
+    <td><font size=2>4815</font></td>
     <td><font size=2>1555</font></td>
-    <td><font size=2>625</font></td>
+    <td><font size=2>605</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>5585</font></td>
-    <td><font size=2>4860</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5795</font></td>
+    <td><font size=2>5170</font></td>
     <td><font size=2>1010</font></td>
-    <td><font size=2>575</font></td>
+    <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Roger(5)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4645</font></td>
-    <td><font size=2>4750</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5425</font></td>
+    <td><font size=2>5770</font></td>
     <td><font size=2>845</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Grant(9)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4380</font></td>
-    <td><font size=2>4090</font></td>
-    <td><font size=2>1005</font></td>
-    <td><font size=2>280</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Rich(1)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4375</font></td>
-    <td><font size=2>4845</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5140</font></td>
+    <td><font size=2>5175</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>250</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Grant(9)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5090</font></td>
+    <td><font size=2>4650</font></td>
+    <td><font size=2>1005</font></td>
+    <td><font size=2>280</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -115,41 +116,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Steven(2)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>5075</font></td>
-    <td><font size=2>4415</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5540</font></td>
+    <td><font size=2>5020</font></td>
     <td><font size=2>1125</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(4)</font></td>
-    <td><font size=2>3</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>4250</font></td>
-    <td><font size=2>4665</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4560</font></td>
+    <td><font size=2>4875</font></td>
     <td><font size=2>790</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Randy(8)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>5215</font></td>
+    <td><font size=2>6625</font></td>
+    <td><font size=2>1020</font></td>
+    <td><font size=2>85</font></td>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>4190</font></td>
-    <td><font size=2>4800</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>4520</font></td>
+    <td><font size=2>5565</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>195</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4195</font></td>
-    <td><font size=2>5845</font></td>
-    <td><font size=2>1000</font></td>
-    <td><font size=2>85</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>John(6)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>4145</font></td>
-    <td><font size=2>4645</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>4705</font></td>
+    <td><font size=2>5355</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
