--- a/pickups.html
+++ b/pickups.html
@@ -298,8 +298,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>KJ Hamler/Kerryon Johnson</td>
+<td width=50>11/4</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -346,7 +346,8 @@ Team 2  - Christian Kirk/Chris Thompson (10/27)<br>
 Team 4  - Rashard Higgins/Emmanuel Sanders (10/27)<br>
 Team 10 - Ben DiNucci/Sam Sloman (10/27)<br>
 Team 9  - Tevin Coleman/Dak Prescott (10/28)<br>
-Team 3  - Derek Carr/Odell Beckham (10/29)
+Team 3  - Derek Carr/Odell Beckham (10/29)<br>
+Team 9  - Justin Jackson/Darrynton Evans (11/4)
 </td></tr>
 <tr><td width=50>9/25</td>
 <td width=600>
@@ -357,5 +358,10 @@ Team 5 - D'Andre Swift
 <td width=600>
 Team 5 - Nyheim Hines<br>
 Team 9 - Darrynton Evans
+</td></tr>
+<tr><td width=50>11/5</td>
+<td width=600>
+Team 3 - Rashard Higgins<br>
+Team 4 - Cairo Santos
 </td></tr>
 </table>
