--- a/roster.html
+++ b/roster.html
@@ -76,12 +76,12 @@
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>CIN</td><td>AJ Green               </td></tr>
 <tr><td>PIT</td><td>James Washington       </td></tr>
+<tr><td>CLE</td><td>Rashard Higgins        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Rob Gronkowski         </td></tr>
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
-<tr><td>CHI</td><td>Cairo Santos           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
@@ -106,12 +106,12 @@
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
 <tr><td>BUF</td><td>Cole Beasley           </td></tr>
-<tr><td>CLE</td><td>Rashard Higgins        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
+<tr><td>CHI</td><td>Cairo Santos           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Henry Ruggs            </td></tr>
 <tr><td>JAX</td><td>James Robinson         </td></tr>
@@ -240,7 +240,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
-<tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>NYG</td><td>Devonta Freeman        </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -257,7 +256,8 @@
 <tr><td>LAR</td><td>Cam Akers              </td></tr>
 <tr><td>PHI</td><td>Jalen Reagor           </td></tr>
 <tr><td>PHI</td><td>Jalen Hurts            </td></tr>
-<tr><td>TEN</td><td>Darrynton Evans        </td></tr>
+<tr><td>LAC</td><td>Justin Jackson         </td></tr>
+<tr><td>DEN</td><td>KJ Hamler              </td></tr>
 </table>
 </td>
 </tr>
