--- a/roster.html
+++ b/roster.html
@@ -221,11 +221,11 @@
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>Austin Hooper          </td></tr>
 <tr><td>TEN</td><td>Jonnu Smith            </td></tr>
 <tr><td>LAC</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Greg Zuerlein          </td></tr>
+<tr><td>DET</td><td>Matt Prater            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Tua Tagovailoa         </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
